--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
